<resources>
    <string name="app_name">Synergii</string>
    <string name="login_label"> Login </string>
    <string name="log_in_btn">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="Register_label"> Sign Up" </string>
    <string name="agent_register_btn">Sign Up</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account_lbl">Already have an account?</string>
    <string name="create_account">Create Account</string>

    //Firebase database nodes
    <string name="dbnode_users">users</string>
    <string name="dbnode_clients">clients</string>
    <string name="dbnode_properties">properties</string>
    <string name="dbnode_chat">chatMessage</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>

    //Firebase field nodes
    <string name="field_users">users</string>
    <string name="field_user_id">userId</string>
    <string name="field_client_id">clientId</string>
    <string name="field_fname">firstName</string>
    <string name="field_lname">lastName</string>
    <string name="field_phone_number">phone</string>
    <string name="field_title">title</string>
    <string name="field_brokerage_name">brokerageName</string>
    <string name="field_description">description</string>
    <string name="field_profile_image">profileImage</string>
    <string name="field_client_properties">properties</string>
    <string name="field_profile_photo">profilePhoto</string>
    <string name="field_client_profile_photo">profilePhotoClient</string>
    <string name="field_profile_logo">profileLogo</string>
    <string name="field_msg">message</string>
    <string name="field_sentBy">sentBy</string>
    <string name="field_assigned_agent">assignedAgent</string>
    <string name="field_receivedBy">receivedBy</string>

    <string name="title_activity_agent_home">AgentHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //agent at client page
    <string name="agent_Name">Agent Name</string>
    <string name="agent_Title">Agent Title</string>
    <string name="agentDesc"> \t\t\t\t\t We, Industria, aims to help your business succeed by advising, finding and negotiating the right property for your business. We believe we can transform your businesses by advising you when to buy your unit and when to lease. In which part of the GTA your should be located. Which builders you should work with and which you should avoid. And more.</string>
    <string name="agent_company"> Brokerage Detail </string>
    <string name="agent_company_name">Xoocca, Brokerage </string>
    <string name="company_title">Broker of Record</string>


    <string-array name="Filter">
        <item>Filter</item>
        <item>Sale</item>
        <item>Lease</item>
    </string-array>

    <string name="terms">Terms of Use</string>
    <string name="terms1">      By using the features of SYNERGii and property listings provided on the platform, you are agreeing to the following terms of use.</string>
    <string name="terms2"> You agree and acknowledge:</string>
    <string name="terms3"> \t\t\t\t\t That this "Terms of Use" does not impose a financial obligation on you or create any representation agreement between you and this Virtual Office Website ("VOW"). All MLS© data obtained from this VOW is intended only for your personal, non-commercial use. You have a bona fide interest in the purchase, sale, or lease of real estate of the type being offered through this VOW. The information here is deemed reliable but not guaranteed by TREB.

That you will not copy, redistribute, retransmit, or otherwise use any of the data or Listing Information provided, except in connection with your consideration of the purchase, sale, or lease of an individual property.

Toronto Real Estate TERB ownership of and the validity of  proprietary rights and copyright in the MLS© database, MLS© data,  MLS© System, and Listing Information.

You will not, directly or indirectly, display, post, disseminate, distribute, publish, broadcast, transfer, sell or sublicense any Listing Information to another individual or entity. The prohibited uses expressly include "scraping" (including "screen scraping" and "database scraping"), "data mining" or any other activity intended to collect, store, re-organize, summarize or manipulate any Listing Information or any related data.

Having entered into a lawful broker-consumer relationship with. The Terms of Use agreement also expressly authorizes TREB, and other TREB Members or their duly authorized representatives, to access the VOW for the purposes of verifying compliance with MLS© Rules and Policies (including the VOW Rules) and monitoring the display of Members Listings by the VOW.

Consent to the fact that your Personal Information, including first and last name, email address, and phone number may be collected, used or disclosed. The personal information may be shared with TREB for auditing and/or legal purposes.</string>


</resources>