<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientsTermsFragment">


<!--    <ImageView-->
<!--        android:id="@+id/synergiiLogo"-->
<!--        android:layout_width="90dp"-->
<!--        android:layout_height="92dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:paddingTop="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:src="@drawable/brokerage" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:text="Xoocca Brokerage"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:textSize="25sp"-->
<!--        android:textStyle="bold|italic"-->
<!--        app:layout_constraintStart_toEndOf="@+id/synergiiLogo"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <View-->
<!--        android:id="@+id/divider"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="?android:attr/listDivider"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/synergiiLogo" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.158">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516">

            <TextView
                android:id="@+id/Heading1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/content1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms1" />

            <TextView
                android:id="@+id/Heading2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms2"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content2TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms3" />
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>